# dailyResearch

./: .gitignore  KL_divergence.ipynb  Simple_Summarization.ipynb  readme.md
GAN_interpretability/: Basic_GANs.ipynb  DCGAN_CIFAR10.ipynb  practicefile_utils.ipynb  utils.py
GAN_interpretability/.ipynb_checkpoints/: Text Generator-checkpoint.ipynb
HyDE/: hyde_technique.ipynb
HyDE/hyde/: pyproject.toml
buildLLM/: Readme.md
buildLLM/buildLLM/: pyproject.toml
chatbot_covid/: app.py
trainers/notebooks/: SFTTrainer.ipynb
trainers/trainers/: pyproject.toml
