[tool.poetry]
name = "hyde"
version = "0.1.0"
description = ""
authors = ["ramyagirish <girish.sureshkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.2"
torch = "^2.4.1"
jupyter = "1.0.0"
sentence-transformers = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
