[tool.poetry]
name = "buildllm"
version = "0.1.0"
description = ""
authors = ["ramyagirish <girish.sureshkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.1"
jupyterlab = ">=4.0"
tiktoken = ">=0.5.1"
matplotlib = ">=3.7.1"
tensorflow = ">=2.15.0"
tqdm = ">=4.66.1"
numpy = ">=1.25,<2.0"
pandas = ">=2.2.1"
psutil = ">=5.9.5"
litgpt = {extras = ["all"], version = "^0.4.11"}
tf-nightly = "^2.18.0.dev20240904"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
