[tool.poetry]
name = "trainers"
version = "0.1.0"
description = ""
authors = ["ramyagirish <girish.sureshkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "1.0"
trl = "^0.9.6"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
